--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "body-parser": "^1.20.2",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^16.3.1",
     "express": "~4.16.1",
+    "express-validator": "^7.0.1",
     "morgan": "~1.9.1",
     "mysql2": "^3.5.0"
   },
